# charcle

./: .gitignore  Devin-logbook-2025-05-05-1.md  Devin-logbook-2025-05-07-1.md  Devin-logbook-2025-05-16-1.md  README.en.md  README.md  pyproject.toml
.github/workflows/: mypy.yml  pytest.yml  ruff.yml
doc/: spec-v1.md
qa/: qa-delete-test-result.md  qa-manual.md  qa-result-20250505.md  qa-result-fix-20250505.md
src/charcle/: __init__.py  cli.py  converter.py  watcher.py
src/charcle/utils/: encoding.py  filesystem.py
tests/: test_cli.py  test_converter.py  test_encoding.py  test_exclude_dir.py  test_watcher.py  test_watcher_exclude.py
