[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "charcle"
version = "0.1.0"
description = "Python file encoding conversion tool"
authors = [
    {name = "uzulla / Junichi Ishida", email = "zishida@gmail.com"},
]
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "chardet>=5.0.0",
    "watchdog>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.0.1",
    "mypy>=1.0.0",
]

[project.scripts]
charcle = "charcle.cli:main"

[tool.ruff]
target-version = "py38"
line-length = 100
select = ["E", "F", "W", "I", "N", "B", "UP", "C90"]
ignore = []

[tool.ruff.isort]
known-first-party = ["charcle"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
strict_optional = true
